--- a/src/Components/NavigationBar.css
+++ b/src/Components/NavigationBar.css
@@ -1,55 +1,45 @@
-/* src/Components/NavigationBar.css */
 
-.navbar {
-  width: 100vw;
-  padding: 0.75rem 1rem;
+.navbar .brand-logo 
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.navbar .brand-logo {
-  font-size: 1.8rem;
-  font-weight: bold;
-}
 
-.navbar .logo-img {
-  height: 50px;
+  height: 35px;
   width: auto;
 }
 
-.navbar .nav-link-underline {
-  position: relative;
-  font-weight: 500;
-  padding: 0.5rem 1rem;
-  transition: color 0.3s ease;
-}
 
-.navbar .nav-link-underline::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -4px;
-  width: 100%;
-  height: 2px;
-  background-color: #0d6efd;
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 0.3s ease;
-}
-
-.navbar .nav-link-underline:hover::after,
-.navbar .nav-link-underline.active::after {
-  transform: scaleX(1);
-}
-
-.navbar .avatar {
+.avatar {
   border-radius: 50%;
   object-fit: cover;
 }
 
-/* Modal override for login/signup */
-.modal-content {
-  border-radius: 0.75rem;
+
+.navbar-collapse {
+  flex-grow: 1;
+  justify-content: space-between;
 }
 
-.modal-title {
-  font-weight: bold;
+.navbar-nav {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+@media (min-width: 992px) {
+  .navbar-nav {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .nav-link-underline {
+    margin-right: 12px;
+  }
+}
+
+.navbar-toggler {
+  border: none;
+  background-color: transparent;
+  outline: none;
 }
